force-app/main/default/objects/Skill__c/fields/Is_Full_Width__c.field-meta.xml
<CustomField>
    <fullName>Is_Full_Width__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the skill card spans the full width of the grid (2 columns) on the portfolio Skills section.</description>
    <label>Is Full Width</label>
    <type>Checkbox</type>
</CustomField>