force-app/main/default/objects/Skill__c/fields/Parent_Skill__c.field-meta.xml
<CustomField>
    <fullName>Parent_Skill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipLabel>Skills</relationshipLabel>
    <relationshipName>Skills</relationshipName>
    <type>Lookup</type>
</CustomField>